--- a/styles/globals.css
+++ b/styles/globals.css
@@ -192,12 +192,18 @@ section {
 }
 
 .book__cover {
-  width: 100%;
-  height: 100%;
   object-fit: cover;
-  max-width: 400px;
+  max-width: 200px;
   max-height: 400px;
   border-radius: 0.5rem;
+}
+
+.spacing {
+  margin-left: 2rem !important;
+}
+
+.w-100 {
+  width: 100% !important;
 }
 
 .zoom-in:hover {
